[package]
name = "jsonwebtoken"
version = "8.1.1"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way."
homepage = "https://github.com/Keats/jsonwebtoken"
repository = "https://github.com/Keats/jsonwebtoken"
keywords = ["jwt", "api", "token", "jwk"]
edition = "2021"
include = ["src/**/*", "benches/**/*", "tests/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
base64 = "0.13"
# For PEM decoding
pem = {version = "1", optional = true}
simple_asn1 = {version = "0.6", optional = true}
fluvio-wasm-timer = "0.2"

[dependencies.ring]
git = "https://github.com/briansmith/ring.git"
rev = "0f3bf003"
# requires the latest version to have Ed25519 support on WASM
features = ["std", "wasm32_unknown_unknown_js"]

[dev-dependencies]
# For the custom time example
time = "0.3"
criterion = "0.3"
wasm-bindgen-test = "0.3"

[dev-dependencies.chrono]
version = "=0.4.19"
default-features = false
features = ["wasmbind", "std", "clock"]

[features]
default = ["use_pem"]
use_pem = ["pem", "simple_asn1"]

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
